# value_of_information_webapp

./: .buildpacks  .env  .gitignore  .gitmodules  Procfile  README.md  README_cookiecutter.md  app.json  manage.py  pyproject.toml  pytest.ini  setup.cfg
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt
value_of_information_webapp/: __init__.py  conftest.py  example_simulation.py  forms.py  models.py  query.py  simulation_to_io.py  to_buffer.py  urls.py  user_query.py  views.py
value_of_information_webapp/migrations/: 0001_initial.py  0002_persistedquery_created_at.py  0003_auto_20220509_1603.py  0004_alter_persistedquery_raw_form_data_json.py
value_of_information_webapp/static/css/: project.css
value_of_information_webapp/static/js/: project.js
value_of_information_webapp/templates/: 403.html  404.html  500.html  base.html
value_of_information_webapp/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html  signup_closed.html  verification_sent.html  (+1 more)
value_of_information_webapp/templatetags/: customtags.py
value_of_information_webapp/tests/: test_form.py
value_of_information_webapp/users/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
value_of_information_webapp/utils/: storages.py  utils.py
(+20 files in other folders)
