[tool.poetry]
name = "value_of_information_webapp"
version = "0.1.0"
description = ""
authors = ["tadamcz <tmkadamcz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "2022.1"
python-slugify = "6.1.1"
Pillow = "9.0.1"
argon2-cffi = "21.3.0"
redis = "4.2.0"
hiredis = "2.0.0"
Django = "3.2.12"
django-environ = "0.8.1"
django-model-utils = "4.2.0"
django-allauth = "0.50.0"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.6"
django-redis = "5.2.0"

[tool.poetry.dev-dependencies]
Werkzeug = {version = "2.0.", extras = ["watchdog"]}
ipdb = "0.13.9"
psycopg2-binary = "2.9.3"
mypy = "0.942"
django-stubs = "1.9.0"
pytest = "7.1.1"
pytest-sugar = "0.9.4"
Sphinx = "4.5.0"
sphinx-autobuild = "~=2021.3"
flake8 = "4.0.1"
flake8-isort = "4.1.1"
coverage = "6.3.2"
black = "22.3.0"
pylint-django = "2.5.3"
pre-commit = "2.17.0"
factory-boy = "3.2.1"
django-debug-toolbar = "3.2.4"
django-extensions = "3.1.5"
django-coverage-plugin = "2.0.2"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

